# PGIAgent-Power-Grid-Inspecting-Agent

./: .env.example  .gitignore  LICENSE  README.md  READMEcn.md  package.xml  requirements.txt  setup.py
PGIAgent/agent/: __init__.py  agent.py  agent_graph.py  prompts.py  react_agent.py  state.py  tools.py
PGIAgent/nodes/: detection_node.py  move_node.py  obstacle_node.py  ocr_node.py  track_node.py  vlm_node.py
PGIAgent/srv/: CheckObstacle.srv  MoveCommand.srv  OCR.srv
agent/: __init__.py  agent_graph.py  prompts.py  state.py  tools.py
config/: agent_config.yaml  model_config.yaml  ros_params.yaml  tools_param.yaml
docs/: architecture.md  jetson_setup.md
msg/: CheckObstacle.srv  OCR.srv  Track.srv  VLMDetect.srv  YOLODetect.srv
nodes/: detection_node.py  move_node.py  obstacle_node.py  ocr_node.py  track_node.py  vlm_node.py
scripts/: install_deps.sh  test_agent.py
test/: test_all_services.py
