<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>PGIAgent</name>
  <version>0.1.0</version>
  <description>Power Grid Inspection Agent for JetAuto robot with ROS2 and LangGraph integration</description>
  <maintainer email="admin@example.com">PGIAgent Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS2依赖 -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>laser_geometry</depend>

  <!-- Python依赖 -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-pillow</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-dotenv</exec_depend>

  <!-- 测试依赖 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>